--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 RPC_URL=
-COINGECKO_API_URL= https://api.coingecko.com/api/v3
+CMC_URL=https://pro-api.coinmarketcap.com/v2/cryptocurrency/quotes/latest
+CMC_API_KEY=
