--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-RPC_URL=
+API_KEY= (e.g. 5433b5a40a8d454433db40fca89fcd3)
 CMC_URL=https://pro-api.coinmarketcap.com/v2/cryptocurrency/quotes/latest
-CMC_API_KEY=
+CMC_API_KEY= (e.g. 60270604-3f5g-3ac0-b6b4-fd34356a34d4)
